--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
 </head>
 <body>
 <h2>this is my page</h2>
+  <video width="320" height="240" controls>
+  <source src="https://github.com/raghavkapor/gitpage/blob/main/bandicam%202020-11-10%2002-32-37-812.m" type="video/mp4">
+  
+  Your browser does not support the video tag.
+</video>
 </body>
 </html>
