--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <h2>this is my page</h2>
-  <video width="320" height="240" controls>
+  <video controls>
   <source src="https://github.com/raghavkapor/gitpage/blob/main/bandicam%202020-11-10%2002-32-37-812.mp4" type="video/mp4">
   
   Your browser does not support the video tag.
