--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 <h2>this is my page</h2>
   <video controls>
-  <source src="https://github.com/raghavkapor/gitpage/blob/main/bandicam%202020-11-10%2002-32-37-812.mp4" type="video/mp4">
+  <source src="https://github.com/raghavkapor/gitpage/blob/main/assets/videos/video.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
   <h3>hy</h3>
