--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <h2>this is my page</h2>
-  <video controls>
+  <video controls preload>
   <source src="https://github.com/raghavkapor/gitpage/blob/main/assets/video.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
