--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 <h2>this is my page</h2>
    <video controls class="video__item" width="330" height="200">
-                    <source src="./assets/video/video.mp4" type="video/mp4">
+                    <source src="./assets/video.mp4" type="video/mp4">
      </video>
 </body>
 </html>
