--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h2>this is my page</h2>
+   <div>
+      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+         <a class="navbar-brand" href="#">Logo</a>
+         <ul class="navbar-nav">
+         <li class="nav-item">
+         <a class="nav-link" href="#">Link 1</a>
+          </li>
+        <li class="nav-item">
+         <a class="nav-link" href="#">Link 2</a>
+        </li>
+   </div>
+</body>
+</html>
    <video controls class="video__item" width="330" height="200">
                     <source src="./assets/video.mp4" type="video/mp4">
      </video>
-</body>
-</html>
+   
