--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 <body>
    <div>
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-         <a class="navbar-brand" href="#">Logo</a>
          <ul class="navbar-nav">
          <li class="nav-item">
          <a class="nav-link" href="#">Link 1</a>
           </li>
         <li class="nav-item">
          <a class="nav-link" href="#">Link 2</a>
+        </li>
+        <li class="nav-item">
+         <a class="nav-link" href="#">Link 3</a>
         </li>
    </div>
 </body>
