--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    </div>
 </body>
 </html>
-   <video controls class="video__item" width="330" height="200">
-                    <source src="./assets/video.mp4" type="video/mp4">
-     </video>
+<!--    <video controls class="video__item" width="330" height="200"> -->
+<!--                     <source src="./assets/video.mp4" type="video/mp4"> -->
+<!--      </video> -->
    
