--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
          <a class="nav-link" href="#">Link 3</a>
         </li>
    </div>
+             <video controls class="video__item" width="330" height="200">
+       <source src="./assets/video.mp4" type="video/mp4">
+</video>
 </body>
 </html>
-<!--    <video controls class="video__item" width="330" height="200"> -->
-<!--                     <source src="./assets/video.mp4" type="video/mp4"> -->
-<!--      </video> -->
+ 
    
