--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
          <ul class="navbar-nav">
          <li class="nav-item">
-         <a class="nav-link" href="#">Link 1</a>
+         <a class="nav-link" href="active">Home</a>
           </li>
         <li class="nav-item">
          <a class="nav-link" href="#">Link 2</a>
