--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
          <a class="nav-link active" href="#">Home</a>
           </li>
         <li class="nav-item">
-         <a class="nav-link" href="#">Link 2</a>
+         <a class="nav-link" href="#">Events</a>
         </li>
         <li class="nav-item">
-         <a class="nav-link" href="#">Link 3</a>
+         <a class="nav-link" href="#">Department</a>
         </li>
    </div>
              <video controls class="video__item" width="330" height="200">
