--- a/index.html
+++ b/index.html
@@ -20,10 +20,22 @@
         <li class="nav-item">
          <a class="nav-link" href="#">Department</a>
         </li>
+             <form class="navbar-form navbar-left" action="/action_page.php">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search" name="search">
+        <div class="input-group-btn">
+          <button class="btn btn-default" type="submit">
+            <i class="glyphicon glyphicon-search"></i>
+          </button>
+        </div>
+      </div>
+    </form>
    </div>
-             <video controls class="video__item" width="330" height="200">
+          <div class="central">
+              <video controls class="video__item" width="330" height="200">
        <source src="./assets/video.mp4" type="video/mp4">
 </video>
+              </div>
 </body>
 </html>
  
