--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li class="nav-item">
          <a class="nav-link" href="#">Department</a>
         </li>
-             <form class="navbar-form navbar-left" action="/action_page.php">
+             <form class="navbar-form navbar-right" action="/action_page.php">
       <div class="input-group">
         <input type="text" class="form-control" placeholder="Search" name="search">
         <div class="input-group-btn">
