--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
       </div>
     </form>
+             </nav>
    </div>
           <div class="central">
               <video controls class="video__item" width="330" height="200">
