--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     </form>
              </nav>
    </div>
+       <div class="image">
+      <img src="./assets/git.jpg"> 
+       </div>
           <div class="central">
               <video controls class="video__item" width="330" height="200">
        <source src="./assets/video.mp4" type="video/mp4">
