--- a/index.html
+++ b/index.html
@@ -20,15 +20,12 @@
         <li class="nav-item">
          <a class="nav-link" href="#">Department</a>
         </li>
-             <form class="navbar-form navbar-right" action="/action_page.php">
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search" name="search">
-        <div class="input-group-btn">
-          <button class="btn btn-default" type="submit">
-            <i class="glyphicon glyphicon-search"></i>
-          </button>
-        </div>
+            <form class="navbar-form navbar-left" action="/action_page.php">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search">
       </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
     </form>
              </nav>
    </div>
