--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <li class="nav-item">
          <a class="nav-link" href="#">Department</a>
         </li>
-            <form class="navbar-form navbar-left" action="/action_page.php">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
-    </form>
+           <form class="navbar-form navbar-right" action="/action_page.php">
+          <div class="form-group">
+           <input type="text" class="form-control" placeholder="Search">
+         </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+         </form>
+   
              </nav>
    </div>
        <div class="image">
@@ -37,7 +37,6 @@
        <source src="./assets/video.mp4" type="video/mp4">
 </video>
               </div>
-       <h2>hy</h2>
 </body>
 </html>
  
