--- a/index.html
+++ b/index.html
@@ -25,13 +25,10 @@
         <li class="nav-item">
          <a class="nav-link" href="#">Department</a>
         </li>
-           <form class="navbar-form navbar-right" action="/action_page.php">
-          <div class="form-group">
-           <input type="text" class="form-control" placeholder="Search">
-         </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-         </form>
-   
+         <ul class="nav navbar-nav navbar-right">
+      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
              </nav>
    </div>
        <div class="image">
@@ -42,7 +39,7 @@
        <source src="./assets/video.mp4" type="video/mp4">
 </video>
               </div>
-       <h2>hy</h2>
+       
 </body>
 </html>
  
