--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
 </head>
 <body>
    <div>
-      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-         <ul class="navbar-nav">
-         <li class="nav-item">
-         <a class="nav-link active" href="#">Home</a>
-          </li>
-        <li class="nav-item">
-         <a class="nav-link" href="#">Events</a>
-        </li>
-        <li class="nav-item">
-         <a class="nav-link" href="#">Department</a>
-        </li>
-         <ul class="nav navbar-nav navbar-right">
+ <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Page 1</a></li>
+      <li><a href="#">Page 2</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
       <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
-             </nav>
+  </div>
+</nav>
    </div>
        <div class="image">
       <img src="./assets/git.jpg"> 
