--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li><a href="#">Page 1</a></li>
       <li><a href="#">Page 2</a></li>
     </ul>
-    <form class="navbar-form navbar-left" action="/action_page.php">
+    <form class="navbar-form navbar-right" action="/action_page.php">
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Search">
       </div>
