--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
    <div>
-<nav class="navbar navbar-inverse" style="margin-bottom:0px;","height:500px;">
+<nav class="navbar navbar-inverse" style="margin-bottom:0px;height:500px;">
   <div class="container-fluid">
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
