--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
         }
         img{
             width:100%;
+            height:500px;
         }
     </style>
 </head>
 <body>
    <div>
-<nav class="navbar navbar-inverse" style="margin-bottom:0px;height:500px;">
+<nav class="navbar navbar-inverse" style="margin-bottom:0px;">
   <div class="container-fluid">
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
