--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             width:100%;
             height:600px;
         }
+        .central{
+          
+        }
     </style>
 </head>
 <body>
@@ -37,7 +40,7 @@
       <img src="./assets/git.jpg"> 
        </div>
     </br>
-          <div class="central">
+          <div class="container central">
               <video controls class="video__item" width="330" height="200">
        <source src="./assets/video.mp4" type="video/mp4">
 </video>
