--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
       <img src="./assets/git.jpg"> 
        </div>
     <hr>
-          <div class="container central">
+          <div class="container-fluid central">
               <video controls class="video__item" width="330" height="200">
        <source src="./assets/video.mp4" type="video/mp4">
 </video>
+              <div class>
               </div>
        
 </body>
