--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
               <video controls class="video__item" width="330" height="200">
        <source src="./assets/video.mp4" type="video/mp4">
 </video>
-              <div class>
+              <div class="container righ">
+                    <p class="text-white">Task number 2</p>
               </div>
        
 </body>
