--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
        <source src="./assets/video.mp4" type="video/mp4">
 </video>
               <div class="container righ">
-                    <p class="text-white">Task number 2</p>
+                    <p class="text-white">git Task number 2</p>
               </div>
        
 </body>
