--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <div class="container righ">
                     <p class="text-white">git Task number 2</p>
               </div>
-       
+    </div>
 </body>
 </html>
  
