--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             height:600px;
         }
         .central{
-          
+          float:left;
         }
         righ{
             float:right
@@ -43,10 +43,13 @@
       <img src="./assets/git.jpg"> 
        </div>
     <hr>
-          <div class="container-fluid central">
-              <video controls class="video__item" width="330" height="200">
+          <div class="container-fluid">
+              <div class="central">
+                  <video controls class="video__item" width="330" height="200">
        <source src="./assets/video.mp4" type="video/mp4">
 </video>
+              </div>
+              
               <div class="container righ">
                     <p class="text-white">git Task number 2</p>
               </div>
