--- a/index.html
+++ b/index.html
@@ -14,10 +14,17 @@
             height:600px;
         }
         .central{
+            margin:50px auto;
           float:left;
+          height:200px;
+          width:330px;
+            
         }
         righ{
-            float:right
+            margin:50px auto;
+            float:right;
+            height:200px;
+            width:330px;
         }
     </style>
 </head>
