--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
        </div>
     <hr>
           <div class="container-fluid">
-              <div class="central">
+              <div class="container central">
                   <video controls class="video__item" width="330" height="200">
        <source src="./assets/video.mp4" type="video/mp4">
 </video>
