--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               </div>
               
               <div class="container righ">
-                    <p class="text-white">git Task number 2</p>
+                  <h4>task-2 git</h4>
               </div>
     </div>
 </body>
