--- a/index.html
+++ b/index.html
@@ -13,16 +13,23 @@
             width:100%;
             height:600px;
         }
+        .top{
+            position:relative;
+            width:100%;
+            height:400px;
+        }
         .central{
-            margin:50px auto;
-          float:left;
-          height:200px;
-          width:330px;
+          postion:absolute;
+            top:10px;
+            left:0px;
+                 height:200px;
+            width:330px;
             
         }
         righ{
             margin:50px auto;
-            float:right;
+            top:10px;
+            right:0px;
             height:200px;
             width:330px;
         }
@@ -50,7 +57,7 @@
       <img src="./assets/git.jpg"> 
        </div>
     <hr>
-          <div class="container-fluid">
+          <div class="container-fluid top">
               <div class="container central">
                   <video controls class="video__item" width="330" height="200">
        <source src="./assets/video.mp4" type="video/mp4">
@@ -58,7 +65,7 @@
               </div>
               
               <div class="container righ">
-                  <h4>task-2 git</h4>
+                  <h4 style="width:50px">task-2 git</h4>
               </div>
     </div>
 </body>
