--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             
         }
         righ{
+            position:absolute;
             margin:50px auto;
             top:10px;
             right:0px;
