--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         }
         .central{
           postion:absolute;
+            margin:50px auto;
             top:10px;
             left:0px;
                  height:200px;
