--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         }
         .central{
           postion:absolute;
-            margin:50px auto;
+            margin:auto;
             top:10px;
             left:0px;
-                 height:200px;
+            height:200px;
             width:330px;
             
         }
         righ{
             position:absolute;
-            margin:50px auto;
+            margin:auto;
             top:10px;
             right:0px;
             height:200px;
@@ -60,13 +60,13 @@
        </div>
     <hr>
           <div class="container-fluid top">
-              <div class="container central">
+              <div class="central">
                   <video controls class="video__item" width="330" height="200">
        <source src="./assets/video.mp4" type="video/mp4">
 </video>
               </div>
               
-              <div class="container righ">
+              <div class=" righ">
                   <h4 style="width:50px">task-2 git</h4>
               </div>
     </div>
