--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             height:600px;
         }
         .top{
-            position:relative;
+            
             width:100%;
             height:400px;
         }
@@ -50,13 +50,13 @@
        </div>
     <hr>
           <div class="container-fluid row">
-              <div class="col-sm-4">
+              <div class="col-lg-6 col-md-auto col-sm-auto">
                   <video controls class="video__item" width="330" height="200">
        <source src="./assets/video.mp4" type="video/mp4">
 </video>
               </div>
               
-              <div class=" col-sm-4">
+              <div class=" col-lg-6 col-md-auto col-sm-auto">
                   <h4 style="width:50px">task-2 git</h4>
               </div>
     </div>
