--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
               </div>
               
               <div class=" col-lg-6 col-md-auto col-sm-auto">
-                  <h4 style="width:50px">task-2 git</h4>
+                  <h5>Description</h5>
+                  <p>task-2 git</p>
               </div>
     </div>
 </body>
