--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               </div>
               
               <div class=" col-lg-6 col-md-auto col-sm-auto">
-                  <h5>Description</h5>
+                  <h5><strong>Description</strong></h5>
                   <p>task-2 git</p>
               </div>
     </div>
