--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <img src="./assets/git.jpg"> 
        </div>
     <hr>
+    
           <div class="container-fluid row">
               <div class="col-lg-6 col-md-auto col-sm-auto">
                   <video controls class="video__item" width="330" height="200">
@@ -61,6 +62,15 @@
                   <p>task-2 git</p>
               </div>
     </div>
+     <div class="container">
+            <hr>
+        </div>
+
+        <h5 id="head" class="mx-auto"> GITHUB IMAGES</h5>
+
+        <div class="container">
+            <hr>
+        </div>
 </body>
 </html>
  
