--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
         <div class="container">
             <hr>
         </div>
+     <div class="row justify-content-sm-center">
+            <div class="col-lg-auto col-md-auto col-sm-auto py-3">
+                <img src="./assets/first.jpg" alt="..." class="img-thumbnail bimages">
+            </div>
+            <div class="col-lg-auto col-md-auto col-sm-auto py-3">
+                <img src="./assets/second.jpg" alt="..." class="img-thumbnail bimages">
+            </div>
+            <div class="col-lg-auto col-md-auto col-sm-auto py-3">
+                <img src="./assets/third.jpg" alt="..." class="img-thumbnail bimages">
+            </div>
+        </div>
 </body>
 </html>
  
