--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         #head{
             text-align: center;
         }
+        #p{
+            width:500px;
+            height:400px;
     </style>
 </head>
 <body>
@@ -70,13 +73,13 @@
         </div>
      <div class="row justify-content-sm-center">
             <div class="col-lg-auto col-md-auto col-sm-auto py-3">
-                <img src="./assets/first.jpg" alt="..." class="img-thumbnail bimages">
+                <img id="p" src="./assets/first.jpg" alt="..." class="img-thumbnail bimages">
             </div>
             <div class="col-lg-auto col-md-auto col-sm-auto py-3">
-                <img src="./assets/second.jpg" alt="..." class="img-thumbnail bimages">
+                <img id="p" src="./assets/second.jpg" alt="..." class="img-thumbnail bimages">
             </div>
             <div class="col-lg-auto col-md-auto col-sm-auto py-3">
-                <img src="./assets/third.jpg" alt="..." class="img-thumbnail bimages">
+                <img id="p" src="./assets/third.jpg" alt="..." class="img-thumbnail bimages">
             </div>
         </div>
 </body>
