--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         #p{
             width:300px;
             height:220px;
+        }
+         .bimages:hover {
+            box-shadow: 0px 0px 15px #9b9b9b;
+        }
     </style>
 </head>
 <body>
