--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
          .bimages:hover {
             box-shadow: 0px 0px 15px #9b9b9b;
         }
+         .img-thumbnail {
+            width: 350px;
+            height: 241px;
+        }
     </style>
 </head>
 <body>
