--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
             <hr>
         </div>
      <div class="row justify-content-sm-center">
-            <div class="col-lg-auto col-md-auto col-sm-auto py-3">
+            <div class="col-sm-3 col-md-6 col-lg-4">
                 <img id="p" src="./assets/first.jpg" alt="..." class="img-thumbnail bimages">
             </div>
-            <div class="col-lg-auto col-md-auto col-sm-auto py-3">
+            <div class="col-sm-3 col-md-6 col-lg-4">
                 <img id="p" src="./assets/second.jpg" alt="..." class="img-thumbnail bimages">
             </div>
-            <div class="col-lg-auto col-md-auto col-sm-auto py-3">
+            <div class="col-sm-3 col-md-6 col-lg-4"">
                 <img id="p" src="./assets/third.jpg" alt="..." class="img-thumbnail bimages">
             </div>
         </div>
