--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     <hr>
     
           <div class="container-fluid row">
-              <div class=""col-sm-3 col-md-6 col-lg-4"">
+              <div class="col-sm-6">
                   <video controls class="video__item" width="330" height="200">
        <source src="./assets/video.mp4" type="video/mp4">
 </video>
               </div>
               
-              <div class=" "col-sm-3 col-md-6 col-lg-4"">
+              <div class="col-sm-6>
                   <h4><strong>Description</strong></h4>
                   <p>task-2 git</p>
               </div>
