--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container">
             <hr>
         </div>
-     <div class="row justify-content-sm-center">
+     <div class="container row justify-content-sm-center">
             <div class="col-sm-3 col-md-6 col-lg-4">
                 <img id="p" src="./assets/first.jpg" alt="..." class="img-thumbnail bimages">
             </div>
