--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         <div class="container">
             <hr>
         </div>
-     <div class="container row justify-content-sm-center">
+                              <div class="container">
+     <div class="row">
             <div class="col-sm-3 col-md-6 col-lg-4">
                 <img id="p" src="./assets/first.jpg" alt="..." class="img-thumbnail bimages">
             </div>
@@ -90,6 +91,7 @@
                 <img id="p" src="./assets/third.jpg" alt="..." class="img-thumbnail bimages">
             </div>
         </div>
+    </div>
 </body>
 </html>
  
