--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
        </div>
     <hr>
     
-          <div class="container-fluid row">
-              <div class="col-sm-6">
+          <div class="container row">
+              <div class="col-sm-3">
                   <video controls class="video__item" width="330" height="200">
        <source src="./assets/video.mp4" type="video/mp4">
 </video>
               </div>
               
-              <div class="col-sm-6>
+              <div class="col-sm-3>
                   <h4><strong>Description</strong></h4>
                   <p>task-2 git</p>
               </div>
