--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     <hr>
     
           <div class="container row">
-              <div class="col-sm-3">
+              <div class="col-lg-6 col-md-auto col-sm-auto">
                   <video controls class="video__item" width="330" height="200">
        <source src="./assets/video.mp4" type="video/mp4">
 </video>
               </div>
               
-              <div class="col-sm-3>
+              <div class="col-lg-6 col-md-auto col-sm-auto">
                   <h4><strong>Description</strong></h4>
                   <p>task-2 git</p>
               </div>
