--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
             </div>
         </div>
     </div>
+   <div claass="container-fluid">
+                                
+                                                                                            </div>
 </body>
 </html>
  
